// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules -> sounds addSound id = ordinal position by filename alpha 1`] = `
Array [
  Object {
    "basename": "fake_sound_0.mp3",
    "filename": "/tmp/fake_sound_0.mp3",
    "id": "0",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 2`] = `
Array [
  Object {
    "basename": "a_fake_sound_0.mp3",
    "filename": "/tmp/a_fake_sound_0.mp3",
    "id": "0",
  },
  Object {
    "basename": "fake_sound_0.mp3",
    "filename": "/tmp/fake_sound_0.mp3",
    "id": "1",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 3`] = `
Array [
  Object {
    "level": "silly",
    "message": "getSounds()",
    "sounds": Array [],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"getSounds()\\",\\"sounds\\":[],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 4`] = `
Array [
  Object {
    "level": "debug",
    "message": "addSound(/tmp/fake_sound_0.mp3)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"addSound(/tmp/fake_sound_0.mp3)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 5`] = `
Array [
  Object {
    "level": "silly",
    "message": "addSound(/tmp/fake_sound_0.mp3)",
    "sounds": Array [
      Object {
        "basename": "fake_sound_0.mp3",
        "filename": "/tmp/fake_sound_0.mp3",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"addSound(/tmp/fake_sound_0.mp3)\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"fake_sound_0.mp3\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 6`] = `
Array [
  Object {
    "level": "silly",
    "message": "getSounds()",
    "sounds": Array [
      Object {
        "basename": "fake_sound_0.mp3",
        "filename": "/tmp/fake_sound_0.mp3",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"getSounds()\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"fake_sound_0.mp3\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 7`] = `
Array [
  Object {
    "level": "silly",
    "message": "getSounds()",
    "sounds": Array [
      Object {
        "basename": "fake_sound_0.mp3",
        "filename": "/tmp/fake_sound_0.mp3",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"getSounds()\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"fake_sound_0.mp3\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 8`] = `
Array [
  Object {
    "level": "debug",
    "message": "addSound(/tmp/a_fake_sound_0.mp3)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"addSound(/tmp/a_fake_sound_0.mp3)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 9`] = `
Array [
  Object {
    "level": "silly",
    "message": "addSound(/tmp/a_fake_sound_0.mp3)",
    "sounds": Array [
      Object {
        "basename": "a_fake_sound_0.mp3",
        "filename": "/tmp/a_fake_sound_0.mp3",
        "id": "0",
      },
      Object {
        "basename": "fake_sound_0.mp3",
        "filename": "/tmp/fake_sound_0.mp3",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"addSound(/tmp/a_fake_sound_0.mp3)\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/a_fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"a_fake_sound_0.mp3\\"},{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"1\\",\\"basename\\":\\"fake_sound_0.mp3\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 10`] = `
Array [
  Object {
    "level": "silly",
    "message": "getSounds()",
    "sounds": Array [
      Object {
        "basename": "a_fake_sound_0.mp3",
        "filename": "/tmp/a_fake_sound_0.mp3",
        "id": "0",
      },
      Object {
        "basename": "fake_sound_0.mp3",
        "filename": "/tmp/fake_sound_0.mp3",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"getSounds()\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/a_fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"a_fake_sound_0.mp3\\"},{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"1\\",\\"basename\\":\\"fake_sound_0.mp3\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds addSound id = ordinal position by filename alpha 11`] = `
Array [
  Object {
    "level": "silly",
    "message": "getSounds()",
    "sounds": Array [
      Object {
        "basename": "a_fake_sound_0.mp3",
        "filename": "/tmp/a_fake_sound_0.mp3",
        "id": "0",
      },
      Object {
        "basename": "fake_sound_0.mp3",
        "filename": "/tmp/fake_sound_0.mp3",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"getSounds()\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/a_fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"a_fake_sound_0.mp3\\"},{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"1\\",\\"basename\\":\\"fake_sound_0.mp3\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds createWatch add, adds 1`] = `
Array [
  Object {
    "level": "debug",
    "message": "addSound(add test)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"addSound(add test)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds createWatch add, adds 2`] = `
Array [
  Object {
    "level": "silly",
    "message": "addSound(add test)",
    "sounds": Array [
      Object {
        "basename": "add test",
        "filename": "add test",
        "id": "0",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"addSound(add test)\\",\\"sounds\\":[{\\"filename\\":\\"add test\\",\\"id\\":\\"0\\",\\"basename\\":\\"add test\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds createWatch add, adds 3`] = `
Array [
  Object {
    "level": "debug",
    "message": "add",
    "path": "add test",
    Symbol(level): "debug",
    Symbol(message): "{\\"path\\":\\"add test\\",\\"message\\":\\"add\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds createWatch delete, removes 1`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(remove test)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(remove test)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds createWatch delete, removes 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "delete",
    "path": "remove test",
    Symbol(level): "debug",
    Symbol(message): "{\\"path\\":\\"remove test\\",\\"message\\":\\"delete\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds createWatch wires add and delete on instantiation 1`] = `
Array [
  "add",
  [Function],
]
`;

exports[`modules -> sounds createWatch wires add and delete on instantiation 2`] = `
Array [
  "delete",
  [Function],
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('') 1`] = `undefined`;

exports[`modules -> sounds getBySoundId getBySoundId('') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId()",
    "result": undefined,
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"getBySoundId()\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('0') 1`] = `
Object {
  "basename": "fake_sound_0.mp3",
  "filename": "/tmp/fake_sound_0.mp3",
  "id": "0",
}
`;

exports[`modules -> sounds getBySoundId getBySoundId('0') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId(0)",
    "result": Object {
      "basename": "fake_sound_0.mp3",
      "filename": "/tmp/fake_sound_0.mp3",
      "id": "0",
    },
    Symbol(level): "debug",
    Symbol(message): "{\\"result\\":{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"fake_sound_0.mp3\\"},\\"message\\":\\"getBySoundId(0)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('dog') 1`] = `undefined`;

exports[`modules -> sounds getBySoundId getBySoundId('dog') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId(dog)",
    "result": undefined,
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"getBySoundId(dog)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('null') 1`] = `undefined`;

exports[`modules -> sounds getBySoundId getBySoundId('null') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId(null)",
    "result": undefined,
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"getBySoundId(null)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getBySoundId getBySoundId('undefined') 1`] = `undefined`;

exports[`modules -> sounds getBySoundId getBySoundId('undefined') 2`] = `
Array [
  Object {
    "level": "debug",
    "message": "getBySoundId(undefined)",
    "result": undefined,
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"getBySoundId(undefined)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds getSounds no sounds 1`] = `
Array [
  Object {
    "level": "silly",
    "message": "getSounds()",
    "sounds": Array [],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"getSounds()\\",\\"sounds\\":[],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds getSounds two sounds 1`] = `
Array [
  Object {
    "basename": "a_fake_sound.mp3",
    "filename": "/tmp/a_fake_sound.mp3",
    "id": "0",
  },
  Object {
    "basename": "fake_sound_0.mp3",
    "filename": "/tmp/fake_sound_0.mp3",
    "id": "1",
  },
]
`;

exports[`modules -> sounds getSounds two sounds 2`] = `
Array [
  Object {
    "level": "silly",
    "message": "getSounds()",
    "sounds": Array [
      Object {
        "basename": "a_fake_sound.mp3",
        "filename": "/tmp/a_fake_sound.mp3",
        "id": "0",
      },
      Object {
        "basename": "fake_sound_0.mp3",
        "filename": "/tmp/fake_sound_0.mp3",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"getSounds()\\",\\"sounds\\":[{\\"filename\\":\\"/tmp/a_fake_sound.mp3\\",\\"id\\":\\"0\\",\\"basename\\":\\"a_fake_sound.mp3\\"},{\\"filename\\":\\"/tmp/fake_sound_0.mp3\\",\\"id\\":\\"1\\",\\"basename\\":\\"fake_sound_0.mp3\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds has known exports 1`] = `
Array [
  "soundServiceLogger",
  "PATH_TO_SOUNDS",
  "SoundService",
  "soundService",
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 1`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(a)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(a)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 2`] = `
Array [
  Object {
    "level": "silly",
    "message": "removeSound(a)",
    "sounds": Array [
      Object {
        "basename": "b",
        "filename": "b",
        "id": "0",
      },
      Object {
        "basename": "c",
        "filename": "c",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"removeSound(a)\\",\\"sounds\\":[{\\"filename\\":\\"b\\",\\"id\\":\\"0\\",\\"basename\\":\\"b\\"},{\\"filename\\":\\"c\\",\\"id\\":\\"1\\",\\"basename\\":\\"c\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 3`] = `
Array [
  Object {
    "basename": "b",
    "filename": "b",
    "id": "0",
  },
  Object {
    "basename": "c",
    "filename": "c",
    "id": "1",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 4`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(b)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(b)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 5`] = `
Array [
  Object {
    "level": "silly",
    "message": "removeSound(b)",
    "sounds": Array [
      Object {
        "basename": "a",
        "filename": "a",
        "id": "0",
      },
      Object {
        "basename": "c",
        "filename": "c",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"removeSound(b)\\",\\"sounds\\":[{\\"filename\\":\\"a\\",\\"id\\":\\"0\\",\\"basename\\":\\"a\\"},{\\"filename\\":\\"c\\",\\"id\\":\\"1\\",\\"basename\\":\\"c\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 6`] = `
Array [
  Object {
    "basename": "a",
    "filename": "a",
    "id": "0",
  },
  Object {
    "basename": "c",
    "filename": "c",
    "id": "1",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 7`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(c)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(c)\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 8`] = `
Array [
  Object {
    "level": "silly",
    "message": "removeSound(c)",
    "sounds": Array [
      Object {
        "basename": "a",
        "filename": "a",
        "id": "0",
      },
      Object {
        "basename": "b",
        "filename": "b",
        "id": "1",
      },
    ],
    Symbol(level): "silly",
    Symbol(message): "{\\"message\\":\\"removeSound(c)\\",\\"sounds\\":[{\\"filename\\":\\"a\\",\\"id\\":\\"0\\",\\"basename\\":\\"a\\"},{\\"filename\\":\\"b\\",\\"id\\":\\"1\\",\\"basename\\":\\"b\\"}],\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`modules -> sounds removeSound removes file and re-sorts remaining items 9`] = `
Array [
  Object {
    "basename": "a",
    "filename": "a",
    "id": "0",
  },
  Object {
    "basename": "b",
    "filename": "b",
    "id": "1",
  },
]
`;

exports[`modules -> sounds removeSound unknown file, no action 1`] = `
Array [
  Object {
    "level": "debug",
    "message": "removeSound(f)",
    Symbol(level): "debug",
    Symbol(message): "{\\"message\\":\\"removeSound(f)\\",\\"level\\":\\"debug\\"}",
  },
]
`;
